Try to fix layout bug in avatar change dialog.

--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -1,6 +1,5 @@
 .image-cropper-container {
   position: relative;
-  display: flex;
   user-select: none;
 }
 
